--- a/src/index.css
+++ b/src/index.css
@@ -26,26 +26,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
-.navbar {
-  border: 2px solid blue;
-  background-color: blueviolet !important;
-}
-
-.navbar_spacer {
-  border: 2px solid red;
-}
-
-.layoutContainer {
-  border: 2px solid green;
-}
-
-* {
-  box-sizing: border-box; 
-}
-
-.navbar, .navbar_spacer, .layoutContainer {
-  margin: 0;
-  padding: 0;
-}
-
